--- a/partials/c-video.hbs
+++ b/partials/c-video.hbs
@@ -1,35 +1,21 @@
-{{! ---
-component: video
-============================================
-
-Requirements:
-
-Options:
-- videoContextClass {String} [default] - Just pass a string
-- videoClasses {String} - Modifier classes
-- videoPoster {String} - Url to a poster image
-- videoOptions {String} - Apply multiple options as string
-- videoMp4 {String} - Url to mp4 video file
-- videoWebm {String} - Url to webm video file
-- videoTrack {Object} - Object which contains tracking data
-- videoTrack.trackSrc {String} - Url tro track file
-- videoTrack.trackSubtitle {String} - Subtitle
-- videoTrack.trackLang {String} - Language
-- videoTrack.trackLabel {String} - Label
-
-Important Notes:
-
---- }}
-
-<video class="c-video{{#if videoContextClass}}--{{videoContextClass}}{{else}}--default{{/if}}{{#if videoClasses}} {{videoClasses}}{{/if}}" data-css="c-video"
-       poster="{{videoPoster}}" {{videoOptions}} tabindex="0">
-	{{#if videoMp4}}
-		<source src="{{videoMp4}}" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'/>
+---
+type: component
+contextData: "video-bp"
+layout: "lyt-docs"
+publish: true
+scssFiles:
+- _c-video.scss
+---
+<video class="c-video{{#if settings.videoContextClass}}--{{settings.videoContextClass}}{{else}}--default{{/if}}{{#if settings.videoClasses}} {{settings.videoClasses}}{{/if}}" data-css="c-video"
+       poster="{{content.videoPoster}}" {{settings.videoOptions}} tabindex="0">
+	{{#if content.videoMp4}}
+		<source src="{{content.videoMp4}}" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'/>
 	{{/if}}
-	{{#if videoWebm}}
-		<source src="{{videoWebm}}" type='video/webm; codecs="vp8, vorbis"'/>
+	{{#if content.videoWebm}}
+		<source src="{{content.videoWebm}}" type='video/webm; codecs="vp8, vorbis"'/>
 	{{/if}}
-	{{#if videoTrack}}
-		<track src="{{trackSrc}}" kind="{{trackSubtitle}}" srclang="{{trackLang}}" label="{{trackLabel}}"/>
+	{{#if content.videoTrack}}
+		<track src="{{content.trackSrc}}" kind="{{content.trackSubtitle}}" srclang="{{content.trackLang}}"
+		       label="{{content.trackLabel}}"/>
 	{{/if}}
 </video>
