--- a/scss/_c-video.scss
+++ b/scss/_c-video.scss
@@ -1,5 +1,5 @@
 /* ===================================================
-VIDEO COMPONENT
+COMPONENT: VIDEO
 =================================================== */
 
 /* ---------------------------------------------------
