Migrate to newest setup

--- a/templates/video.hbs
+++ b/templates/video.hbs
@@ -1,4 +1,5 @@
-<video class="c-video{{#if settings.videoContextClass}}--{{settings.videoContextClass}}{{else}}--default{{/if}}{{#if settings.videoClasses}} {{settings.videoClasses}}{{/if}}"
+<video class="c-video{{#if settings.videoContextClass}}--{{settings.videoContextClass}}{{else}}--default{{/if}}{{#if
+		settings.videoClasses}} {{settings.videoClasses}}{{/if}}"
        data-css="c-video"
        poster="{{getUrl content.videoPoster}}" {{settings.videoOptions}}
        tabindex="0">
